# picacoin

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  generate.sh  libpicacoinconsensus.pc.in  script.sh
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  picacoin.sln  picacoin_config.h  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  picacoin-cli.bash-completion  picacoin-tx.bash-completion  picacoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  picacoin-conf.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  picacoin-cli.1  picacoin-qt.1  picacoin-tx.1  picacoin-util.1  picacoin-wallet.1  picacoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  addrdb.cpp  (+160 more)
(+1210 files in other folders)
