dist_man1_MANS=

if BUILD_PICACOIND
  dist_man1_MANS+=picacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=picacoin-qt.1
endif

if BUILD_PICACOIN_CLI
  dist_man1_MANS+=picacoin-cli.1
endif

if BUILD_PICACOIN_TX
  dist_man1_MANS+=picacoin-tx.1
endif

if BUILD_PICACOIN_UTIL
  dist_man1_MANS+=picacoin-util.1
endif

if ENABLE_WALLET
if BUILD_PICACOIN_WALLET
  dist_man1_MANS+=picacoin-wallet.1
endif
endif
